# users-fastapi

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: issue-branch.yaml
deployment/: Dockerfile
src/: alembic.ini  main.py  requirements.txt
src/api/: main.py
src/api/v1/adapters/: permission.py  role.py  user.py
src/api/v1/dependencies/: services.py  utils.py
src/api/v1/dtos/: __init__.py  permission.py  profile.py  role.py  user.py
src/api/v1/routers/: __init__.py  permission.py  role.py  user.py
src/config/: settings.py
src/db/: base.py  session.py
src/db/models/: permission.py  profile.py  role.py  user.py
src/domain/: data_objects.py  exceptions.py  permission.py  profile.py  role.py  user.py
src/domain/interfaces/: hash_service.py  repository.py
src/domain/interfaces/adapters/: __init__.py  client_adapter.py  (+1 more)
src/domain/models/: permission.py  role.py  user.py  value_objects.py
src/domain/services/: auth.py  permission.py  role.py  user.py
src/infrastructure/auth/: hash_service.py
src/infrastructure/persistance/: base.py
src/schema/: user.py
src/test/: conftest.py
src/test/fixtures/: client.py  db.py  domain_models.py  dtos.py  persistance_models.py  repositories.py  services.py
src/test/repositories/: test_permission_repository.py  test_role_repository.py  test_user_repository.py
src/test/routers/: test_permission_router.py  test_role_router.py  test_user_router.py
src/test/services/: test_permission_service.py  test_role_service.py  test_user_service.py
(+19 files in other folders)
