[tool.poetry]
name = "users"
version = "0.1.0"
description = "users microservice with fastapi"
authors = ["Elias Velardez <eliasvelardez38@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
