[tool.poetry]
name = "users"
version = "0.1.0"
description = "users microservice with fastapi"
authors = ["Elias Velardez <eliasvelardez38@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
attrs = "^23.1.0"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
psycopg2-binary = "^2.9.9"
httpx = "^0.25.2"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
